--- a/djangocouch/docker-compose.2.yaml
+++ b/djangocouch/docker-compose.2.yaml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  init-couchdb:
+    image: curlimages/curl:latest
+    depends_on:
+      couchdb:
+        condition: service_healthy
+    networks:
+      - my-network
+    entrypoint: >
+      sh -c "
+        curl -X PUT http://admin:admin@couchdb:5984/_users &&
+        curl -X PUT http://admin:admin@couchdb:5984/_replicator &&
+        curl -X PUT http://admin:admin@couchdb:5984/_global_changes
+      "
+
   couchdb:
     image: couchdb:latest
     container_name: my-couchdb
