--- a/djangocouch/docker-compose.2.yaml
+++ b/djangocouch/docker-compose.2.yaml
@@ -52,8 +52,8 @@ services:
         condition: service_started
     networks:
       - my-network
-    enviorment:
-      - USE_REDIS=True
+    environment:
+      - USE_REDIS=1
     command: sh -c "python generate_data.py && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
 
 networks:
