--- a/djangocouch/docker-compose.1.yaml
+++ b/djangocouch/docker-compose.1.yaml
@@ -8,14 +8,12 @@ services:
         condition: service_healthy
     networks:
       - my-network
-    entrypoint: 
-      - sh
-      - -c
-      - |
+    entrypoint: >
+      sh -c "
         curl -X PUT http://admin:admin@couchdb:5984/_users &&
         curl -X PUT http://admin:admin@couchdb:5984/_replicator &&
         curl -X PUT http://admin:admin@couchdb:5984/_global_changes
-
+      "
   couchdb:
     image: couchdb:latest
     container_name: my-couchdb
